src/v2.1/10_API-Сервер_(api)/10_Настройка/10_Настройка.md
# Настройка
1. Создаём новую БД для проекта со сравнением `utf8_unicode_ci`
2. Импортируем в БД файл `/database.my.sql` если у вас MySQL или `/database.pg.sql` если у вас PostgreSQL
3. Добавляем первого *живого* пользователя с правами администратора:
    ```sql
    INSERT INTO `users`
    SET
      `id`         = 2,
      `auth_id`    = 'admin@email.tld',
      `created_at` = '2018-04-24 00:00:00';

    INSERT INTO `info_users`
    SET
      `id`          = 2,
      `user_id`     = 2,
      `roles`       = '{"admin":true}',
      `first_name`  = 'Иван',
      `second_name` = 'Иванович',
      `last_name`   = 'Иванов',
      `created_at`  = '2018-04-24 00:00:00';
    ```
    \* Обратите внимание, пользователь идёт под номером 2, т.к. в системе уже есть один пользователь с правами администратора (используемый для cli-скриптов)

4. Cron-задачи: вам необходимо добавить всего лишь одну задачу в `crontab`
    ```bash
    * * * * * /path/to/php /path/to/cron.php > /dev/null
    ```
    Каждую минуту будет выполняться файл `cron.php`, в нём используется библиотека [Jobby](https://github.com/jobbyphp/jobby), которая определяет какую задачу необходимо выполнить, подробнее прочитать можно [здесь](../40_Использование/60_Cron-задачи.md)

5. Если у вас Apache, то всё необходимое уже настроено в файле `/public/.htaccess`, если у вас nginx тогда поместите в директиву `server` код, указанный ниже:
    ```nginx
    error_page 405 =200 $uri;

    location / {
        try_files $uri $uri/ /index.php?$query_string;
    }

    location ~ \.php$ {
        include fastcgi.conf;

        fastcgi_pass 127.0.0.1:9074;
        fastcgi_index index.php;

        try_files $uri =404;
    }
    ```

6. Переопределите настройки:
    - cors.yaml
    - database.yaml
    - file.yaml
    - guides.yaml
    - mail.yaml

    > Настройки по умолчанию можно посмотреть [здесь](../20_Настройки_по_умолчанию/30_Config.md).

    > Как переопределить настройки можно прочитать [здесь](../30_Расширение_функционала/30_Расширение_Config.md).
7. Если у вас MySQL пропустите этот пункт, если у вас PostgreSQL тогда надо указать параметр `sql_driver: pgsql` в файлах:
    - /public/index.php >> `$core = new Core($path_root, 'pgsql');`
    - /cron.php >> `$jobby = (new Jobby($path_root, 'pgsql'))->init();`
8. Переходим в браузере по адресу `https://ваш-путь-до-api` вы должны увидеть json-ответ: `{"data":{"version":{"android":1,"ios":1}}}` это значит всё настроено правильно